--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Bookmark Search",
-  "version": "0.1.1",
-  "description": "HTML Bookmark Search with Regexp",
+  "version": "0.2.0",
+  "description": "HTML Bookmark Search with RegExp",
   "short_name": "bookmark-search",
   "author": "hantang",
   "homepage_url": "https://github.com/hantang/bookmark-search/",
@@ -14,15 +14,15 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "site/icons/icon16.png",
+      "48": "site/icons/icon48.png",
+      "128": "site/icons/icon128.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "site/icons/icon16.png",
+    "48": "site/icons/icon48.png",
+    "128": "site/icons/icon128.png"
   },
   "background": {
     "service_worker": "background.js"
