--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,6 @@ jobs:
         run: npm install
       - name: Build Site
         run: npm run build
-
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -28,8 +27,17 @@ jobs:
             release/bookmark_search-*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Archive source code as ZIP
+        run: zip -r source.zip .
+
+      - name: Archive source code as TAR.GZ
+        run: tar -czf source.tar.gz .
+
       - name: Upload built artifact
         uses: actions/upload-artifact@v4
         with:
-          path: release/bookmark_search-*
-          retention-days: ${{ inputs.retention_days }}
+          path:
+            - release/bookmark_search-*
+            - source.zip
+            - source.tar.gz
