--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,18 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    env:
+      TARGET: site
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/configure-pages@v4
+      - name: Build
+        run: bash deploy.sh ${{ env.TARGET }}
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: "./src/site"
+          path: ${{ env.TARGET }}
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
