--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,18 +6,22 @@
   "short_name": "bookmark-search",
   "author": "hantang",
   "homepage_url": "https://github.com/hantang/search-bookmark/",
-  "permissions": [
-    "activeTab",
-    "bookmarks",
-    "history"
-  ],
   "action": {
     "default_popup": "popup.html"
   },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+B",
+        "mac": "Command+B"
+      }
+    }
+  },
+  "optional_host_permissions": ["*://*/*"],
+  "permissions": ["activeTab", "bookmarks", "history", "favicon"],
   "icons": {
     "16": "assets/icons/icon-16x16.png",
     "48": "assets/icons/icon-48x48.png",
-    "64": "assets/icons/icon-64x64.png",
     "128": "assets/icons/icon-128x128.png"
   }
 }
